# project_penjadwalan

./: .gitignore  .qmllint.ini  Justfile  ProjectPenjadwalan.pyproject  ProjectPenjadwalan.pyproject.LYvRNR  README.md  Taskfile.yml  app.v  app.zig  application_rc.py  cari_qmlls.py  cari_qt_path.py  hatch_build.py  hatch_build.py.bak  main.py  main.spec  main.spec.bak  myapp.spec  project_penjadwalan.code-workspace  pyproject.toml  qtquickcontrols2.conf  resources.qrc  setup.py
.github/workflows/: qmlLint.yml
algo/: buat_waktu.py  database.py  database2.py  jadwal.db  jadwal_advanced.db  jadwal_advanced_v5.db  jadwal_advanced_v6.db  simulated_annealing.py  v2.py  v3.py  v6.py  waktu.py
db/: db.sqbpro  db.sqlite  db.sqlite-shm  db.sqlite-wal  db_timeslots.csv  dosen.csv  jadwal_sa.dbml  jadwal_sa.sql  jadwal_sa_sqlite.sql  jadwal_sa_sqlite_v2.sql  jadwal_sa_v2.dbml  jadwal_sa_v2.sql  ruangan.csv
qml/: AboutPage.ui.qml  BuatJadwalPage.ui.qml  Dosen.qml  DosenForm.ui.qml  Home.qml  HomePage.ui.qml  JadwalPraktekPage.ui.qml  JadwalTeoriPage.ui.qml  Main.qml  MataKuliahPage.ui.qml  PageDosen.ui.qmlfake85673.qmlproject.qtds  PengajarPage.ui.qml  RuanganPage.ui.qml  TambahMataKuliahPage.ui.qml  TambahPengajarPage.ui.qml  TambahWaktuKuliahPage.ui.qml  WaktuKuliahPage.ui.qml  main.qml  page_home.ui.qmlfake85673.qmlproject.qtds
qml/components/: HoverButton.qml  Icon.qml  IconButton.qml
qml/helpers/: MaterialIcons.js
qml/pages/: AboutPage.qml  BuatJadwalPage.qml  HomePage.qml  JadwalPraktekPage.qml  MataKuliahPage.qml  PengajarPage.qml  RuanganPage.qml  TambahMataKuliahPage.qml  TambahPengajarPage.qml  WaktuPage.qml
src/myapp/: __init__.py  __main__.py  application.qrc  context.py  log.py  main.py
src/myapp/algo/: jadwal_advanced_v5a.db  jadwal_sa.db  v4.py  v5.py  v5a.py  v6.py
src/myapp/assets/: icon_transparent_bg.tif
src/myapp/bridge/: __init__.py  context.py  log.py
src/myapp/model/: __init__.py  filter_proxy.py  jadwal_model.py  jadwal_model.py.bak  jadwal_model_legacy.py  matakuliah.py  matakuliah_model.py  pengajar.py  pengajar_model.py  pengajar_proxy.py  ruangan_model.py  waktu.py  waktu_model.py  waktu_proxy.py
(+52 files in other folders)
