[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myapp"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "pyside6",
    "reportlab>=4.4.5",
    "result>=0.17.0",
    "rustedpy-maybe>=0.0.0",
]
authors = [
  { name="Nama Anda", email="email@anda.com" },
]
description = "Aplikasi penjadwalan mata kuliah menggunakan Simulated Annealing."
readme = "README.md"

[project.scripts]
myapp = "myapp.main:run"

[tool.hatch.build]
hooks-enabled = true
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/myapp"]

[tool.hatch.build.targets.wheel.shared-data]
"src/myapp/assets" = "myapp/assets"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "ruff>=0.14.1",
]
